# getPM2D5-old

./: .gitignore  CMakeLists.txt  README.md  batchprocess.cpp  batchprocess.h  batchprocess.ui  getpm2d5.cpp  getpm2d5.h  getpm2d5.ui  icons.qrc  main.cpp  singleprocess.cpp  singleprocess.h  singleprocess.ui  translation.qrc
R/: aodModel.RData  script.r
doc/: ppt.tex
i18n/: getPM2D5_zh_CN.qm  getPM2D5_zh_CN.ts
testData/2015.1-Henan-AOD/: MYD04_L2.A2015001.AOD550.tif  MYD04_L2.A2015003.AOD550.tif  MYD04_L2.A2015004.AOD550.tif  MYD04_L2.A2015007.AOD550.tif  MYD04_L2.A2015008.AOD550.tif  MYD04_L2.A2015009.AOD550.tif  MYD04_L2.A2015010.AOD550.tif  MYD04_L2.A2015010.AOD550.tif.aux.xml  MYD04_L2.A2015011.AOD550.tif  MYD04_L2.A2015016.AOD550.tif  MYD04_L2.A2015017.AOD550.tif  MYD04_L2.A2015018.AOD550.tif  MYD04_L2.A2015019.AOD550.tif  MYD04_L2.A2015020.AOD550.tif  MYD04_L2.A2015021.AOD550.tif  MYD04_L2.A2015022.AOD550.tif  MYD04_L2.A2015023.AOD550.tif  MYD04_L2.A2015024.AOD550.tif
testData/2015.1-Henan-RH/: GEOS.fp.asm.inst1_2d_lfo_Nx.20150101_0600.V01.tif  GEOS.fp.asm.inst1_2d_lfo_Nx.20150101_0600.V01.tif.aux.xml  GEOS.fp.asm.inst1_2d_lfo_Nx.20150104_0600.V01.tif  GEOS.fp.asm.inst1_2d_lfo_Nx.20150105_0600.V01.tif  GEOS.fp.asm.inst1_2d_lfo_Nx.20150110_0600.V01.tif  GEOS.fp.asm.inst1_2d_lfo_Nx.20150113_0600.V01.tif  GEOS.fp.asm.inst1_2d_lfo_Nx.20150115_0600.V01.tif  GEOS.fp.asm.inst1_2d_lfo_Nx.20150119_0600.V01.tif  GEOS.fp.asm.inst1_2d_lfo_Nx.20150120_0600.V01.tif  GEOS.fp.asm.inst1_2d_lfo_Nx.20150121_0600.V01.tif  GEOS.fp.asm.inst1_2d_lfo_Nx.20150122_0600.V01.tif  GEOS.fp.asm.inst1_2d_lfo_Nx.20150123_0600.V01.tif  GEOS.fp.asm.inst1_2d_lfo_Nx.20150125_0600.V01.tif  GEOS.fp.asm.inst1_2d_lfo_Nx.20150127_0600.V01.tif  GEOS.fp.asm.inst1_2d_lfo_Nx.20150128_0600.V01.tif  GEOS.fp.asm.inst1_2d_lfo_Nx.20150129_0600.V01.tif  GEOS.fp.asm.inst1_2d_lfo_Nx.20150130_0600.V01.tif  GEOS.fp.asm.inst1_2d_lfo_Nx.20150131_0600.V01.tif
testData/2015.1-Henan-WS/: GEOS.fp.asm.inst1_2d_lfo_Nx.20150104_0600.V01.tif  GEOS.fp.asm.inst1_2d_lfo_Nx.20150107_0600.V01.tif  GEOS.fp.asm.inst1_2d_lfo_Nx.20150108_0600.V01.tif  GEOS.fp.asm.inst1_2d_lfo_Nx.20150109_0600.V01.tif  GEOS.fp.asm.inst1_2d_lfo_Nx.20150111_0600.V01.tif  GEOS.fp.asm.inst1_2d_lfo_Nx.20150112_0600.V01.tif  GEOS.fp.asm.inst1_2d_lfo_Nx.20150116_0600.V01.tif  GEOS.fp.asm.inst1_2d_lfo_Nx.20150117_0600.V01.tif  (+9 more)
tmp/: RHdata20150110.csv  WSdata20150110.csv  imageData.csv  result.csv  time20150110.csv
(+2158 files in other folders)
